test/distributions/sungeun/misc/no_use_BlockDist.good
no_use_BlockDist.chpl:3: error: unresolved call 'Block(boundingBox=domain(1,int(64),false))'
