test/distributions/sungeun/misc/no_use_BlockDist.chpl
config var n = 10;

var Dist = new blockDist(boundingBox={1..n});

